<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_auto_bookkeeping"
        android:icon="@drawable/ic_action_auto"
        android:title="@string/auto_bookkeeping"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_action_theme"
        android:title="@string/theme_mode"
        app:showAsAction="ifRoom" />
</menu>
